--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+h2 {
+  margin-top: 5px;
+}
+
+.row {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .container {
   margin-top: 50px;
 }
@@ -10,7 +19,7 @@
 
 .task-label {
   margin-left: -20px;
-  margin-right: 20px;
+  margin-right: 5px;
 }
 
 .hidden {
